--- a/Login/pages/comercial-varejo/index.html
+++ b/Login/pages/comercial-varejo/index.html
@@ -7,7 +7,7 @@
     <script src="https://app.powerbi.com/scripts/reportembed.min.js"></script>
     <script src="index.js" defer></script>
     <link rel="shortcut icon" href="../Imagens/Logotipo1.png" type="image/x-icon">
-    <title>Portal Bi - Comercial</title>
+    <title>Portal Bi - Comercial Varejo</title>
 </head>
 <body>
     <!--Botão mostrar/ocultar barra lateral e exibir texto-->
