--- a/Login/login.html
+++ b/Login/login.html
@@ -19,10 +19,11 @@
         <div class="right-login">
             <div class="card-login">
 
+                <img src="imagens_login/Logotipo2.png" alt="Logotipo" id="logo-login">
+
                 <form class="textfield" id="forms">
 
                     <div class="textfield">
-                        <img src="imagens_login/Logotipo2.png" alt="Logotipo" width="150px" id="logo-login">
                         <label for="departamento" id="testeDepart">Departamento</label>
                         <select id="departamento" name="departamento" class="textfield">
                             <option value="none">-</option>
@@ -35,7 +36,7 @@
 
                     <div class="textfield">
                         <label for="email">Usuário</label>
-                        <input type="email" name="email" id="email" placeholder="email@exemplo.com.br" onchange="onChangeEmail()">
+                        <input type="email" name="email" id="email" placeholder="Email@exemplo.com.br" onchange="onChangeEmail()">
                         <div class="erro" id="email-obrigatorio">*Email obrigatório</div>
                         <div class="erro" id="email-invalido">*Email inválido</div>
                     </div>
