--- a/Login/login.html
+++ b/Login/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="login.css">
     <link rel="shortcut icon" href="pages/Imagens/Logotipo1.png" type="image/x-icon">
     <script src="login.js" defer></script>
-    <title>Tela de Login</title>
+    <title>Portal Bi - Login</title>
 </head>
 <body>
     <div class="main-login">
