--- a/Login/pages/cobranca/index.html
+++ b/Login/pages/cobranca/index.html
@@ -30,7 +30,7 @@
         </ul>
 
         <div class="logout">
-            <button type="button" onclick="logout()">Lougout</button>
+            <button type="button" onclick="logout()"><img src="../Imagens/seta-logout.png" alt="logout" width="18px">Lougout</button>
         </div>
 
         <footer class="rodape">
