--- a/Login/login.html
+++ b/Login/login.html
@@ -31,6 +31,7 @@
                             <option value="comercial-atacado" id="comercial-atacado">Comercial Atacado</option>
                             <option value="compras" id="compras">Compras</option>
                             <option value="cobranca" id="cobranca">Cobrança</option>
+                            <option value="logistica" id="logistica">Logistica</option>
                         </select>
                     </div>
 
