--- a/Login/login.html
+++ b/Login/login.html
@@ -13,18 +13,18 @@
 
         <div class="left-login">
             <h1>Realize o login <br>e tenha acesso aos dashboards.</h1>
-            <img src="imagens_login/dashboard-animate.svg" class="left-login-image" alt="dashboard">
+            <img src="pages/Imagens_login/dashboard-animate.svg" class="left-login-image" alt="dashboard">
         </div>
 
         <div class="right-login">
             <div class="card-login">
 
-                <img src="imagens_login/Logotipo2Natal.png" alt="Logotipo" id="logo-login">
+                <img src="pages/Imagens_login/Logotipo2Natal.png" alt="Logotipo" id="logo-login">
 
                 <form class="textfield" id="forms">
 
                     <div class="textfield">
-                        <label for="departamento" id="testeDepart"> <img src="imagens_login/departamento.png" alt="departamento" width="15px"> Departamento</label>
+                        <label for="departamento" id="testeDepart"> <img src="pages/Imagens_login/departamento.png" alt="departamento" width="15px"> Departamento</label>
                         <select id="departamento" name="departamento" class="textfield">
                             <option value="none">-</option>
                             <option value="comercial-varejo" id="comercial-varejo">Comercial Varejo</option>
@@ -35,7 +35,7 @@
                     </div>
 
                     <div class="textfield">
-                        <label for="email"> <img src="imagens_login/usuario.png" alt="login" width="15px"> Usuário</label>
+                        <label for="email"> <img src="pages/Imagens_login/usuario.png" alt="login" width="15px"> Usuário</label>
                         <img src="" alt="">
                         <input type="email" name="email" id="email" placeholder="Email@exemplo.com.br" onchange="onChangeEmail()">
                         <div class="erro" id="email-obrigatorio">*Email obrigatório</div>
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="textfield">
-                        <label for="senha"> <img src="imagens_login/cadeado.png" alt="cadeado" width="15px"> Senha</label>
+                        <label for="senha"> <img src="pages/Imagens_login/cadeado.png" alt="cadeado" width="15px"> Senha</label>
                         <input type="password" name="senha" id="senha" placeholder="Digite sua senha" onchange="onChangePassword()">
                         <div class="erro" id="senha-obrigatoria">*Senha obrigatória</div>
                     </div>
